--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js --host"
+    "start": "nodemon index.js"
     
   },
   "author": "Angel Eduardo Puc Barrera",
