--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "api-calendar",
   "version": "1.0.0",
   "description": "ApiRest de Web Calendario",
-  "main": "index.js",
+  "main": "Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-    
+    "start": "node Index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Angel Eduardo Puc Barrera",
   "license": "ISC",
