--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node Index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon Index.js",
+    "dev": "nodemon Index.js"
   },
   "author": "Angel Eduardo Puc Barrera",
   "license": "ISC",
